--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 			<a href="#" class="btn btn-red">Red Button</a>
 			<h3 class="heading-tertiary">Animated Button</h3>
 			<a href="#" class="btn btn-bsc btn-animated">Animated Button</a>
+			<br>
+
+			<button class="btn btn-bsc">this is a button</button>
 		</div>
 	</section>
 <div class="container">
