--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <link rel="stylesheet" href="css/chrystal.css">
 <link rel="stylesheet" href="css/styles.css">
+<script type="javascript" href="js/main.js">
+</script>
 <title>Chrystal Library</title>
 </head>
 <body>
@@ -55,6 +57,12 @@
 			</div>
 		</div>
 	</section>
-<div class="container">
+	<div class="loading-screen">
+		<div class="loading-screen__content">
+			<div class="loader-md">
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
